<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scale_vehicle_control</name>
  <version>0.0.1</version>
  <description>Control package for 1/5 scale vehicle</description>
  <maintainer email="tjddnwkdiy@gmail.com">Seongwoo Kim</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>sllidar_ros2</depend>
  <depend>ublox_gps</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
